@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-controller.sh,v 1.9 2005/09/08 20:59:07 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-controller.sh,v 1.10 2005/12/16 19:32:31 wolf31o2 Exp $
 
 . ${clst_sharedir}/targets/support/functions.sh
 
@@ -16,9 +16,9 @@ case $1 in
 			echo "${clst_packages}" > \
 				${clst_chroot_path}/usr/livecd/grppkgs.txt
 		fi
-		exec_in_chroot ${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
+		exec_in_chroot \
+			${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
 		;;
-
 	clean)
 		find ${clst_chroot_path}/usr/lib -iname "*.pyc" -exec rm -f {} \;
 		;;
